Update SwaggerConfig.java